# smart-shop-agent

./: .env  README.md  app.py  app1.py  app2.py  chunks_result.txt  config.py  main.py  pyproject.toml  requirements.txt  table_schema.txt
agents/rag_agent/: langgraph_agent.py
agents/sql_agent/: first_code.py  langgraph_agent.py  main.py  nodes.py  shared.py  tools.py
synthetic_Data/: data_filling.py
utils/: Prompts.py  Prompts.txt  chunker.py  db_store.py  ingestor.py  main.py  map_reducer.py  retriver.py
